tests/mypy/mypy_function_wrapper_fn_t4.out
tests/mypy/mypy_function_wrapper_fn_t4.py:26: error: No overload variant of "__call__" of "_FunctionDecorator" matches argument type "str"  [call-overload]
tests/mypy/mypy_function_wrapper_fn_t4.py:26: note: Possible overload variants:
tests/mypy/mypy_function_wrapper_fn_t4.py:26: note:     def [_P, _R, _T: Any] __call__(self, callable: Callable[_P, _R] | Callable[[type[_T], **_P], _R] | Callable[[type[_T]], _R]) -> FunctionWrapper[_P, _R]
tests/mypy/mypy_function_wrapper_fn_t4.py:26: note:     def [_P] __call__(self, callable: _Descriptor) -> FunctionWrapper[_P, Any]
tests/mypy/mypy_function_wrapper_fn_t4.py:27: error: No overload variant of "__call__" of "_FunctionDecorator" matches argument type "None"  [call-overload]
tests/mypy/mypy_function_wrapper_fn_t4.py:27: note: Possible overload variants:
tests/mypy/mypy_function_wrapper_fn_t4.py:27: note:     def [_P, _R, _T: Any] __call__(self, callable: Callable[_P, _R] | Callable[[type[_T], **_P], _R] | Callable[[type[_T]], _R]) -> FunctionWrapper[_P, _R]
tests/mypy/mypy_function_wrapper_fn_t4.py:27: note:     def [_P] __call__(self, callable: _Descriptor) -> FunctionWrapper[_P, Any]
Found 2 errors in 1 file (checked 1 source file)
